Fix overflowing button in the textbank

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/ridics.bohemiantextbank-search-viewer-combined.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BohemianTextBank/css/ridics.bohemiantextbank-search-viewer-combined.less
@@ -161,8 +161,27 @@
             }
 
             .corpus-search-setting-div-pagination {
-                padding-left: 8%;
-                padding-right: 8%;
+
+                .indefinite-pagination-button-group-elements {
+                    .indefinite-pagination-load-all {
+
+                    }
+
+                    .btn {
+                        padding: 3px 6px;
+                        white-space: normal;
+                    }
+                }
+                
+                @media (min-width: @large-screen)
+                {
+                    .indefinite-pagination-button-group-elements {
+                        .btn {
+                            padding: 6px 12px;
+                            white-space: nowrap;
+                        }
+                    }
+                }
 
                 .ui-slider-handle {
                     width: 1.5em;
